fix login on mobile

--- a/app/styles/_app_layout.sass
+++ b/app/styles/_app_layout.sass
@@ -559,6 +559,10 @@ pre code
     left: 0
 
 +media($mobile)
+  .wh-login
+    width: 100%
+    height: 100vh
+    margin: 0
   .wh-save-item .wh-save-item-extra-btn
     display: inline-block
   .wh-item-publish-time-section
